--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@babel/core": "7.18.0",
     "@babel/runtime": "7.18.0",
     "@react-native-community/eslint-config": "2.0.0",
+    "@types/react-native": "^0.67.7",
     "babel-jest": "26.6.3",
     "eslint": "7.32.0",
     "jest": "26.6.3",
